--- a/setup/sandbox/vagrant/ubuntu24.04/Vagrantfile
+++ b/setup/sandbox/vagrant/ubuntu24.04/Vagrantfile
@@ -53,6 +53,7 @@ Vagrant.configure("2") do |config|
     mkdir -p /nix /home/sandbox
     sudo chown -R sandbox:sandbox /home/sandbox
 
+    chmod +x /home/sandbox/.dotfiles/setup/bootstrap/ubuntu-bootstrap.sh
     /home/sandbox/.dotfiles/setup/bootstrap/ubuntu-bootstrap.sh
   SHELL
 end
